@@ -57,6 +57,7 @@ FLARE.  If not, see http://www.gnu.org/licenses/
 Avatar::Avatar()
 	: Entity()
 	, attack_cursor(false)
+	, mm_key(settings->mouse_move_swap ? Input::MAIN2 : Input::MAIN1)
 	, hero_stats(NULL)
 	, charmed_stats(NULL)
 	, act_target()
@@ -68,8 +69,8 @@ Avatar::Avatar()
 	, lock_enemy(NULL)
 	, time_played(0)
 	, questlog_dismissed(false)
-	, attacking_with_main1(false)
-	, moving_with_main2(false) {
+	, using_main1(false)
+	, using_main2(false) {
 
 	init();
 
@@ -298,7 +299,7 @@ bool Avatar::pressing_move() {
 		return false;
 	}
 	else if (settings->mouse_move) {
-		return inpt->pressing[Input::MAIN2] && !inpt->pressing[Input::SHIFT];
+		return inpt->pressing[mm_key] && !inpt->pressing[Input::SHIFT];
 	}
 	else {
 		return (inpt->pressing[Input::UP] && !inpt->lock[Input::UP]) ||
@@ -384,13 +385,13 @@ void Avatar::logic(std::vector<ActionData> &action_queue, bool restrict_power_us
 	}
 
 	// assist mouse movement
-	if (!inpt->pressing[Input::MAIN2]) {
+	if (!inpt->pressing[mm_key]) {
 		drag_walking = false;
 	}
 
 	// block some interactions when attacking/moving
-	attacking_with_main1 = inpt->pressing[Input::MAIN1] && !inpt->lock[Input::MAIN1];
-	moving_with_main2 = inpt->pressing[Input::MAIN2] && !inpt->lock[Input::MAIN2];
+	using_main1 = inpt->pressing[Input::MAIN1] && !inpt->lock[Input::MAIN1];
+	using_main2 = inpt->pressing[Input::MAIN2] && !inpt->lock[Input::MAIN2];
 
 	// handle animation
 	if (!stats.effects.stun) {
@@ -407,11 +408,11 @@ void Avatar::logic(std::vector<ActionData> &action_queue, bool restrict_power_us
 		transform_map = mapr->getFilename();
 	}
 
-	int mm_attack_id = menu->act->getSlotPower(MenuActionBar::SLOT_MAIN2);
+	int mm_attack_id = (settings->mouse_move_swap ? menu->act->getSlotPower(MenuActionBar::SLOT_MAIN2) : menu->act->getSlotPower(MenuActionBar::SLOT_MAIN1));
 	bool mm_can_use_power = true;
 
 	if (settings->mouse_move) {
-		if (!inpt->pressing[Input::MAIN2]) {
+		if (!inpt->pressing[mm_key]) {
 			lock_enemy = NULL;
 		}
 		if (lock_enemy && lock_enemy->stats.hp <= 0) {
@@ -444,11 +445,11 @@ void Avatar::logic(std::vector<ActionData> &action_queue, bool restrict_power_us
 
 				// allowed to move or use powers?
 				if (settings->mouse_move) {
-					allowed_to_move = restrict_power_use && (!inpt->lock[Input::MAIN2] || drag_walking) && !lock_enemy;
+					allowed_to_move = restrict_power_use && (!inpt->lock[mm_key] || drag_walking) && !lock_enemy;
 					allowed_to_use_power = true;
 
-					if ((inpt->pressing[Input::MAIN2] && inpt->pressing[Input::SHIFT]) || lock_enemy) {
-						inpt->lock[Input::MAIN2] = false;
+					if ((inpt->pressing[mm_key] && inpt->pressing[Input::SHIFT]) || lock_enemy) {
+						inpt->lock[mm_key] = false;
 					}
 				}
 				else {
@@ -462,8 +463,8 @@ void Avatar::logic(std::vector<ActionData> &action_queue, bool restrict_power_us
 
 				if (pressing_move() && allowed_to_move) {
 					if (move()) { // no collision
-						if (settings->mouse_move && inpt->pressing[Input::MAIN2]) {
-							inpt->lock[Input::MAIN2] = true;
+						if (settings->mouse_move && inpt->pressing[mm_key]) {
+							inpt->lock[mm_key] = true;
 							drag_walking = true;
 						}
 
@@ -471,7 +472,7 @@ void Avatar::logic(std::vector<ActionData> &action_queue, bool restrict_power_us
 					}
 				}
 
-				if (settings->mouse_move && cursor_enemy && mm_can_use_power && powers->checkCombatRange(mm_attack_id, &stats, cursor_enemy->stats.pos)) {
+				if (settings->mouse_move &&  settings->mouse_move_attack && cursor_enemy && mm_can_use_power && powers->checkCombatRange(mm_attack_id, &stats, cursor_enemy->stats.pos)) {
 					stats.cur_state = StatBlock::AVATAR_STANCE;
 					lock_enemy = cursor_enemy;
 				}
@@ -510,7 +511,7 @@ void Avatar::logic(std::vector<ActionData> &action_queue, bool restrict_power_us
 				if (activeAnimation->getName() != "run")
 					stats.cur_state = StatBlock::AVATAR_STANCE;
 
-				if (settings->mouse_move && cursor_enemy && mm_can_use_power && powers->checkCombatRange(mm_attack_id, &stats, cursor_enemy->stats.pos)) {
+				if (settings->mouse_move && settings->mouse_move_attack && cursor_enemy && mm_can_use_power && powers->checkCombatRange(mm_attack_id, &stats, cursor_enemy->stats.pos)) {
 					stats.cur_state = StatBlock::AVATAR_STANCE;
 					lock_enemy = cursor_enemy;
 				}
